2002-01-09  Bruno Haible  <bruno@clisp.org>

	* x-java.l (strip_ending_spaces): Fix logic.

2002-01-09  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l: Avoid endless loop when encountering unterminated string.

2002-01-08  Bruno Haible  <bruno@clisp.org>

	* message.h (format_type): New enum value 'format_elisp'.
	(NFORMATS): Increment.
	* message.c (format_language): Add format_elisp entry.
	(format_language_pretty): Likewise.
	* format.h (formatstring_elisp): New declaration.
	* format-elisp.c: New file.
	* format.c (formatstring_parsers): Add formatstring_elisp.
	* x-elisp.h: New file.
	* x-elisp.c: New file.
	* xgettext.c: Include x-elisp.h.
	(main): Call x_elisp_extract_all, x_elisp_keyword.
	(usage): Mention the languages Lisp, EmacsLisp, librep.
	(language_to_scanner): Add elisp rule.
	(extension_to_language): Add elisp rule.
	* Makefile.am (noinst_HEADERS): Add x-elisp.h.
	(FORMAT_SOURCE): Add format-elisp.c.
	(xgettext_SOURCES): Add x-elisp.c.

2002-01-06  Bruno Haible  <bruno@clisp.org>

	* x-librep.c (read_object): Fix handling of #[ and #(.

2002-01-06  Bruno Haible  <bruno@clisp.org>

	* x-lisp.c (read_object): Treat ',.' like ',@'.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	Make "msgmerge --update" work better on CJK files even if iconv() is
	not available.
	* po-charset.h (po_is_charset_weird): New declaration.
	(po_is_charset_weird_cjk): Likewise..
	(po_lex_weird_cjk): New variable declaration.
	* po-charset.c (po_is_charset_weird): New function, extracted from
	po_lex_charset_set.
	(po_is_charset_weird_cjk): New function.
	(po_lex_weird_cjk): New variable.
	(po_lex_charset_init): Initialize po_lex_weird_cjk.
	(po_lex_charset_set): Call po_is_charset_weird and
	po_is_charset_weird_cjk. Set po_lex_weird_cjk.
	(po_lex_charset_close): Reset po_lex_weird_cjk.
	* po-lex.c (mbfile_getc): If po_lex_weird_cjk is set, possibly return
	a double byte instead of single byte.